# time-is-money

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: test_coverage.sh
src/: lib.rs  main.rs
src/data_operations/: parsers.rs
src/file_handlers/: txt_handlers.rs  xls_handlers.rs
src/utils/: folder_file_utils.rs  structs.rs
ui/: AppIcon.icns  appwindow.slint
