[package]
name = "acc-app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.127"
slint = "1.6"
rfd = "0.14.1"
calamine = "0.19"
xlsxwriter = "0.6.1"

[build-dependencies]
slint-build = "1.6"
