[package]
name = "acc-app"
version = "0.1.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.127"
slint = "1.6"
rfd = "0.14.1"
calamine = "0.19"
xlsxwriter = "0.6.1"
chrono = "0.4"
tempfile = "3.3"

[package.metadata.bundle]
name = "Time is Money"
identifier = "io.github.Ktoettotakoy.accounting_app"
icon = ["ui/AppIcon.icns"]
version = "1.0.1"
category = "Finance"
short_description = "App to fill in the expenses from .txt file with a special format"
long_description = """
Purpose is simple: learn and build something useful for me (Using Rust was a bad idea though),
but I've learned a lot.
"""

[build-dependencies]
slint-build = "1.6"
